  - Mutual Investment Treaties now reduce the AI's willingess to do the "Increase Autonomy" continuous focus

 Balance:
  - Reduced the taxing religious institutions income a little bit
  - Reduced the frequency of the "Labour Unions Protest Migration"
  - Clamp the "Religious Group Request in Government" pp to a maximum of 500

 Bugfix:
  - Fixed the Automatic Debt Repayment forcing you into the negatives
  - Fixed the configurable UI display for resources and tax cost factor breaking

 Content:
  - Added several new Internal Faction Events

 Database:
  - Added "Nuclear Energy" to all of the nations who have nuclear reactors
  - Enabled submarine based ICBMs
  - Add back NIRBM to nations who previously had the tech

 Game Rules:
  - Fixed the AI Easy/Very Easy Energy options not allowing achievements

 Localization:
  - Fixed missing tooltip for Medium Naval Nuclear Engines

 Special Projects:
  - Super Heavy Tank Turrets are now locked behind both "Large Gun Tech" && 4th Generation Tank Hulls
  - Increased the Civilian R&D Breakthrough cost for "Thorium Nuclear Fuel"
  - Added a resource cost to "Super Heavy Tank Turrets" to help make it more balanced
  - "Fully Autonomous Computer Frameworks" has now moved to "Human Imitation AI"

v1.11.0a

 Bugfix:
  - Fixed the paratrooper_raids from vanilla spamming a has_tech check bloating the logs
  - Fixed an improper visible check for the idea "Lacks International Recognition"
  - Fixed freezing for non-MTG owners
  - Fixed some production costs for IRBM/ICBMs
  - Fixed some small minor errors for nations
  - Fixed some other small bugs in the UI
  - Fixed a crash with Syrias "Statement of 100" Event

v1.11.0

 Achievements:
  - Added a tooltip to clean up the tooltips for the African Nation achievements

 AI:
  - Added an exception to the leave NATO for Spain so Unidas Podemos will leave NATO
  - AI Russia should no longer do "Challenge NATO" focus if its already at war