@@ -5484,10 +5484,15 @@ ideas = {
 			}
 		}
 
-		# Nuclear Branch (New)
+		# Nuclear Branch
 		PER_us_sanctions = {
 			on_add = { log = "[GetDateText]: [Root.GetName]: add idea PER_us_sanctions" }
 			picture = inflation4
+			cancel = {
+				NOT = {
+					country_exists = USA
+				}
+			}
 			modifier = {
 				trade_opinion_factor = -0.25
 				oil_export_multiplier_modifier = -0.50
@@ -5501,6 +5506,11 @@ ideas = {
 		PER_resistance_economy = {
 			on_add = { log = "[GetDateText]: [Root.GetName]: add idea PER_us_sanctions" }
 			picture = resistance_economy
+			cancel = {
+				NOT = {
+					country_exists = USA
+				}
+			}
 			modifier = {
 				trade_opinion_factor = -0.05
 				oil_export_multiplier_modifier = -0.10
@@ -5513,6 +5523,11 @@ ideas = {
 		PER_us_sanctions_harshened = {
 			on_add = { log = "[GetDateText]: [Root.GetName]: add idea PER_us_sanctions_harshened" }
 			picture = inflation5
+			cancel = {
+				NOT = {
+					country_exists = USA
+				}
+			}
 			modifier = {
 				trade_opinion_factor = -0.5
 				oil_export_multiplier_modifier = -0.80
@@ -5526,6 +5541,11 @@ ideas = {
 		PER_resistance_economy_harsh = {
 			on_add = { log = "[GetDateText]: [Root.GetName]: add idea PER_resistance_economy_harsh" }
 			picture = resistance_economy
+			cancel = {
+				NOT = {
+					country_exists = USA
+				}
+			}
 			name = PER_resistance_economy
 			modifier = {
 				trade_opinion_factor = -0.25
@@ -5611,10 +5631,10 @@ ideas = {
 			on_add = { log = "[GetDateText]: [Root.GetName]: add idea PER_the_lion_roars_idea" }
 			picture = iranian_unity
 			modifier = {
-				army_core_defence_factor = 0.25
+				army_core_defence_factor = 0.15
 				army_breakthrough_against_major_factor = 0.10
 				army_breakthrough_against_minor_factor = 0.10
-				army_infantry_attack_factor = 0.30
+				army_infantry_attack_factor = 0.15
 				army_fuel_consumption_factor = -0.10
 			}
 		}
