@@ -26637,6 +26637,7 @@ focus_tree = {
 					has_country_flag = PER_its_joever_nukes
 				}
 			}
+			country_exists = USA
 		}
 
 		completion_reward = {
@@ -26691,6 +26692,7 @@ focus_tree = {
 			NOT = {
 				has_war_with = CHI
 			}
+			country_exists = USA
 		}
 
 		completion_reward = {
