@@ -1443,14 +1443,13 @@ focus_tree = {
 				meta_effect = {
 					text = {
 						set_politics = {
-							ruling_party = [OUTLOOK]
+							ruling_party = neutrality
 							elections_allowed = yes
 							last_election = "[YEAR].[MONTH].1"
 							election_frequency = 48
 						}
 					}
-					OUTLOOK = "[meta_ideology_names]"
-					YEAR = election_year
+					YEAR = global.year
 					MONTH = global.month
 				}
 				clr_country_flag = no_leader_change
@@ -7691,14 +7690,13 @@ focus = {
 				meta_effect = {
 					text = {
 						set_politics = {
-							ruling_party = [OUTLOOK]
+							ruling_party = neutrality
 							elections_allowed = yes
 							last_election = "[YEAR].[MONTH].1"
 							election_frequency = 48
 						}
 					}
-					OUTLOOK = "[meta_ideology_names]"
-					YEAR = election_year
+					YEAR = global.year
 					MONTH = global.month
 				}
 				clr_country_flag = no_leader_change
