@@ -13,23 +13,20 @@ opinion_modifiers = {
 	violated_territorial_sovereignty = {
 		value = -80
 		decay = 0.2
-		trade = no
 	}
 
 	violated_allies_sovereignty = {
-		value = -50
+		value = -35
 		decay = 0.1
-		trade = no
 	}
 
 	violated_neighbors_sovereignty = {
-		value = -25
+		value = -5
 		decay = 0.1
-		trade = no
 	}
 
 	dislike_when_they_do_stuff = {
-		value = -15
+		value = -5
 		decay = 0.1
 	}
 
