@@ -330,7 +330,8 @@ types = {
 							has_idea = intervention_limited_interventionism
 						}
 						is_neighbor_of = FROM
-					}else_if = {
+					}
+					else_if = {
 						limit = {
 							has_idea = intervention_regional_interventionism
 						}
