@@ -860,6 +860,9 @@ country_event = {
 	title = nuclear_iran.18.t
 	desc = nuclear_iran.18.d
 	is_triggered_only = yes
+	trigger = {
+		country_exists = USA
+	}
 	# Ok
 	option = {
 		name = nuclear_iran.18.a
