@@ -561,6 +561,7 @@ country_event = {
 			has_country_flag = temp_flag_raids
 		}
 	}
+
 	option = {
 		name = MD_raid.10.a
 		log = "[GetDateText]: [This.GetName]: MD_raid.10.a executed"
@@ -569,7 +570,19 @@ country_event = {
 			modifier = violated_neighbors_sovereignty
 		}
 		ai_chance = {
-			base = 40
+			base = 5
+		}
+	}
+
+	option = {
+		name = MD_raid.10.b
+		log = "[GetDateText]: [This.GetName]: MD_raid.10.b executed"
+		add_opinion_modifier = {
+			target = FROM
+			modifier = violated_neighbors_sovereignty
+		}
+		ai_chance = {
+			base = 5
 		}
 	}
 }
@@ -581,24 +594,36 @@ country_event = {
 	desc = MD_raid.11.d
 	picture = GFX_pkk_munic
 	is_triggered_only = yes
-	hidden = yes
 	trigger = {
 		NOT = {
 			has_country_flag = temp_flag_raids
 		}
 	}
-	immediate = {
-		log = "[GetDateText]: [This.GetName]: MD_raid.11.a executed"
 
-		if = {
-			limit = {
-				NOT = {
-					has_government = FROM
-				}
+	option = {
+		name = MD_raid.11.a
+		log = "[GetDateText]: [This.GetName]: MD_raid.11.a executed"
+		add_opinion_modifier = {
+			target = FROM
+			modifier = dislike_when_they_do_stuff
+		}
+		ai_chance = {
+			base = 1
+			modifier = {
+				add = 2
+				NOT = { has_government = FROM }
 			}
-			add_opinion_modifier = {
-				target = FROM
-				modifier = dislike_when_they_do_stuff
+		}
+	}
+
+	option = {
+		name = MD_raid.11.b
+		log = "[GetDateText]: [This.GetName]: MD_raid.11.b executed"
+		ai_chance = {
+			base = 1
+			modifier = {
+				add = 2
+				has_government = FROM
 			}
 		}
 	}
@@ -615,14 +640,20 @@ country_event = {
 	option = {
 		name = MD_raid.12.a
 		log = "[GetDateText]: [This.GetName]: MD_raid.12.a executed"
-
 		add_opinion_modifier = {
 			target = FROM
 			modifier = violated_allies_sovereignty
 		}
-
 		ai_chance = {
 			base = 40
+		}
+	}
+
+	option = {
+		name = MD_raid.12.b
+		log = "[GetDateText]: [This.GetName]: MD_raid.12.b executed"
+		ai_chance = {
+			base = 1
 		}
 	}
 }
