@@ -123,46 +123,39 @@
  MD_raid.1.b: "Promise the public a response!"
  MD_raid.1.c: "Demand reparations from [FROM.GetName]"
  MD_raid.1.e: "Issue a diplomatic protest"
-
  MD_raid.2.t: "[FROM.GetName] Demands Reparations"
  MD_raid.2.d: "We've just received a communique from [FROM.GetName]. They are demanding compensation for the economic damages they claim to have suffered. In a recent public address, [FROM.GetLeader] warned that any refusal to pay would be met with "swift and severe" consequences."
  MD_raid.2.a: "We're not paying a damn thing."
  MD_raid.2.b: "The price for peace?"
-
  MD_raid.3.t: "[FROM.GetName] Pays Reparations"
  MD_raid.3.d: "Our threats of retaliation were enough to intimidate [FROM.GetName]'s core leadership into handing over the funds needed to cover the damages caused by their unjustified and illegal violations of our territorial integrity."
  MD_raid.3.a: "This will teach them a lesson."
-
  MD_raid.4.t: "[FROM.GetName] Refuses to Pay Reparations"
  MD_raid.4.d: "In a recent address to a crowd, [FROM.GetLeader] boldly proclaimed that "not a single coin" would be paid by their government. This is a deeply humiliating moment for our state. Not only was our territorial integrity compromised by their initial attack, but now our credibility on the international stage is under threat as well."
  MD_raid.4.a: "We must retaliate!"
  MD_raid.4.b: "Play it off like nothing happened."
  MD_raid.4.c: "Ask for International Sanctions!"
-
  MD_raid.5.t: "Our Government Faces International and Domestic Humiliation"
  MD_raid.5.d: "Global reporters have used phrases like "empty words," "empty threats," and "paper tiger" to describe our response to the recent attacks by foreign actors. Our failure to respond decisively has dealt a severe blow to the credibility of our government and cast doubt on our military as a viable means of defense."
  MD_raid.5.a: "Shit"
-
  MD_raid.6.t: "Retaliation!"
  MD_raid.6.d: "Our recent attacks on foreign soil did not go unnoticed by their government, prompting a series of retaliatory strikes against our own territory."
  MD_raid.6.a: "They will pay..."
-
  MD_raid.10.t: "[FROM.GetName] has Raided a Neighbor!"
  MD_raid.10.d: "One of our neighbors have been attacked by a [FROM.GetName]! With no official war declared prior to the strike, this is clearly a violation of territorial integrity by a hostile power. The region waits anxiously for their response to this strike."
  MD_raid.10.a: "Will we be next?"
-
+ MD_raid.10.b: "They probably deserved it anyway"
  MD_raid.11.t: "[FROM.GetName] has conducted a Raid!"
  MD_raid.11.d: "[FROM.GetName] conducted a military strike against a nation they have no declared war with. [FROM.GetLeader] made a statement, claiming that the strike was conducted to protect [FROM.GetName]'s interests in the region."
  MD_raid.11.a: "How dare they do this!"
-
+ MD_raid.11.b: "It is not our business"
  MD_raid.12.t: "[FROM.GetName] has struck an ally!"
  MD_raid.12.d: "In a atrocious act, [FROM.GetLeader] authorized a strike by [FROM.GetName]'s military into one of our allies! This act of aggression cannot be ignored, and official protests and responses must be given."
- MD_raid.12.a: "We must assist our ally!"
-
+ MD_raid.12.a: "We will always stand with our allies!"
+ MD_raid.12.b: "We didn't like them anyway"
  MD_raid.13.t: "[FROM.GetName] asks for Sanctions!"
  MD_raid.13.d: "[FROM.GetLeader] has requested that the international community sanction us after our refusal to pay their absurd reparations. Only time will tell if the world will follow their request.\n\n§YWe will suffer international relation, political, and economic penalties that will worsen depending on how many other nations join the sanctions against us! Nations will be more likely to join the sanctions the more hostile they are towards us, or if they are diplomatically or economically opposed to us.§!"
  MD_raid.13.a: "Our Economy Will Stand!"
-
  MD_raid.14.t: "[FROM.FROM.GetName] Requests International Sanctions!"
  MD_raid.14.d: "[FROM.FROM.GetLeader] has requested that the international community sanction [FROM.GetName] following their refusal to pay the requested reparations after their military strike against [FROM.FROM.GetName]. The world now must respond to their request:"
  MD_raid.14.a: "We Will Join the Sanctions!"
