@@ -9,13 +9,18 @@ v1.11.1
   - Reduced the taxing religious institutions income a little bit
   - Reduced the frequency of the "Labour Unions Protest Migration"
   - Clamp the "Religious Group Request in Government" pp to a maximum of 500
+  - Reduced some buffs from Irans nuclear tree
+  - Reduced amount opinion lost from doing raids
 
  Bugfix:
   - Fixed the Automatic Debt Repayment forcing you into the negatives
   - Fixed the configurable UI display for resources and tax cost factor breaking
+  - Fixed an issue that caused crashing if you hovered over 2 Syrian focuses
+  - Fixed an issue with localization for the Iranian nuclear tree if the U.S. does not exist
 
  Content:
   - Added several new Internal Faction Events
+  - Added an option to not condemn raids if you aren't the one being attacked (before you always lost opinion)
 
  Database:
   - Added "Nuclear Energy" to all of the nations who have nuclear reactors
